_sass/ibug.scss
@import "normalize";
@import "rouge-ibug";
@import "variables";
@import "adaptive";
@import "blog";
@import "home";
@import "main-content";
@import "footer";
@import "pagination";

* {
	box-sizing: border-box;
}

body {
	padding: 0;
	margin: 0;
	font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
	font-size: 16px;
	line-height: 1.5;
	color: $body-text-color;

	background-color: $header-bg-color;
	background-image: url('https://ibug.github.io/image/bg.jpg'), linear-gradient(120deg, $header-bg-color-secondary, $header-bg-color);
	background-repeat: no-repeat;
	background-size: cover;
	background-attachment: fixed;
	background-position: center;
}

a {
	color: $body-link-color;
	text-decoration: none;

	&:hover {
		text-decoration: underline;
	}
}

.btn {
	display: inline-block;
	margin-bottom: 1rem;
	color: rgba(255, 255, 255, 0.7);
	background-color: rgba(255, 255, 255, 0.08);
	border-color: rgba(255, 255, 255, 0.2);
	border-style: solid;
	border-width: 1px;
	border-radius: 0.3rem;
	transition: color 0.2s, background-color 0.2s, border-color 0.2s;

	&:hover {
		text-decoration: none;
	}

	&:not(.disabled):hover {
		color: rgba(255, 255, 255, 0.8);
		background-color: rgba(255, 255, 255, 0.2);
		border-color: rgba(255, 255, 255, 0.3);
	}

	+ .btn {
		margin-left: 1rem;
	}

	@include large {
		padding: 0.75rem 1rem;
	}

	@include medium {
		padding: 0.6rem 0.9rem;
		font-size: 0.9rem;
	}

	@include small {
		padding: 0.75rem;
		font-size: 0.9rem;
	}
}

.btn-inline {
	display: inline-block;
	margin-bottom: 0.2rem;
	color: rgba(255, 255, 255, 0.7);
	background-color: rgba(255, 255, 255, 0.07);
	border-color: rgba(255, 255, 255, 0.2);
	border-style: solid;
	border-width: 1px;
	border-radius: 0.3rem;
	transition: color 0.2s, background-color 0.2s, border-color 0.2s;

	&:hover {
		text-decoration: none;
	}

	&:not(.disabled):hover {
		color: rgba(255, 255, 255, 0.8);
		background-color: rgba(255, 255, 255, 0.2);
		border-color: rgba(255, 255, 255, 0.3);
	}

	+ .btn-inline {
		margin-left: 1rem;
	}

	@include large {
		padding: 0.3rem 0.5rem;
	}

	@include medium {
		padding: 0.15rem 0.4rem;
		font-size: 0.9rem;
	}

	@include small {
		display: block;
		width: 100%;
		padding: 0.1rem 0.3rem;
		font-size: 0.85rem;
	}
}

.post-tags {
	margin-top: 1.5em;
	text-align: center;
	font-size: 0.9em;
	font-weight: normal;

	.post-tag {
		display: inline-block;
		padding: 0.22em 0.555em;
		margin: 0 0.5em;
		color: rgba(255, 255, 255, 0.7);
		background-color: rgba(255, 255, 255, 0.1);
		border: 1px solid rgba(255, 255, 255, 0.3);
		border-radius: 2em;

		&:hover {
			text-decoration: none;
			background-color: rgba(255, 255, 255, 0.2);
		}
	}
}

.tag {
	display: inline-block;
	padding: 0.2em 0.5em;
	color: #1E6BB8;
	border: 1px solid #155799;
	border-radius: 1em;
	background-color: rgba(31, 153, 87, 0.1);

	&:hover {
		text-decoration: none;
		background-color: rgba(31, 153, 87, 0.2);
	}
}

.tag-cloud {
	margin: auto;
	text-align: center;

	.set-1, .set-2, .set-3,
	.set-4, .set-5, .set-6,
	.set-7, .set-8, .set-9 {  // Post tags
		display: inline-block;
		padding: 0.2em 0.5em;
		margin: 0.2em auto;
		color: #1E6BB8;
		border: 1px solid #155799;
		border-radius: 1em;
		background-color: rgba(31, 153, 87, 0.1);

		&:hover {
			text-decoration: none;
			background-color: rgba(31, 153, 87, 0.2);
		}
	}
}

.post-meta {
	.post-meta-tags {
		margin-left: 1em;
	}
}

.blog-post {
	img {
		display: block;
		margin-left: auto;
		margin-right: auto;
	}
}

.card {
	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
	margin: 0.2rem 0.2rem 0.4rem;
}

.page-header {
	color: $header-heading-color;
	text-align: center;
	background: transparent;

	@include large {
		padding: 4rem 5rem 3rem;
	}

	@include medium {
		padding: 3rem 3rem 2.5rem;
	}

	@include small {
		padding: 2rem 1rem 1.5rem;
	}

	&.home {
		@include large {
			padding: 6rem 5rem 3rem;
		}

		@include medium {
			padding: 4rem 3rem 2.5rem;
		}

		@include small {
			padding: 3rem 1rem 2rem;
		}
	}
}

.page-header-nav {
	@include large {
		margin-top: -2rem;
		height: 2rem;
	}

	@include medium {
		margin-top: -1.8rem;
		height: 1.8rem;
	}

	@include small {
		margin-top: -1.5rem;
		height: 1.5rem;
	}
}

.project-name {
	margin-top: 0;
	margin-bottom: 0.1rem;

	@include large {
		font-size: 3.25rem;
	}

	@include medium {
		font-size: 2.25rem;
	}

	@include small {
		font-size: 1.75rem;
	}
}

.project-tagline {
	margin-bottom: 2rem;
	font-weight: normal;
	opacity: 0.7;

	@include large {
		font-size: 1.25rem;
	}

	@include medium {
		font-size: 1.15rem;
	}

	@include small {
		font-size: 1rem;
	}
}

.project-date {
	margin-bottom: 0rem;
	font-weight: normal;
	opacity: 0.7;
	//font-style: italic;

	@include large {
		font-size: 1.0rem;
	}

	@include medium {
		font-size: 0.95rem;
	}

	@include small {
		font-size: 0.75rem;
	}
}

